--- a/todo/backend/Pipfile
+++ b/todo/backend/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 django = "~=3.2.0"
 djangorestframework = "~=3.13.0"
+django-cors-headers = "==3.11.0"
 
 [dev-packages]
 
