--- a/blogapi/Pipfile
+++ b/blogapi/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "~=3.2.0"
 djangorestframework = "~=3.13.0"
 dj-rest-auth = "~=2.2.0"
+django-allauth = "~=0.50.0"
 
 [dev-packages]
 
