--- a/blogapi/Pipfile
+++ b/blogapi/Pipfile
@@ -8,8 +8,12 @@ django = "~=3.2.0"
 djangorestframework = "~=3.13.0"
 dj-rest-auth = "~=2.2.0"
 django-allauth = "~=0.50.0"
+pyyaml = "~=6.0"
+uritemplate = "~=4.1.0"
+drf-yasg = "~=1.20.0"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.9"
